--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -10,31 +10,31 @@
 
   },
   "VCS": {
-    "AgvType": 1, //0:Fork,1:潛盾, 2:巡檢
-    "SID": "002:001:001",
-    "EQName": "AGV_002",
+    "AgvType": 2, //0:Fork,1:潛盾, 2:巡檢
+    "SID": "001:001:001",
+    "EQName": "AGV_001",
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
     "AlarmList_json_Path": "D:\\param\\AlarmList.json",
     "SimulationMode": false,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.0.102",
+        "IP": "192.168.0.100",
         "Port": 9090
       },
       "Wago": {
-        "IP": "192.168.0.102",
+        "IP": "192.168.0.100",
         //"IP": "127.0.0.1",
         "Port": 502
       },
       "AGVS": {
         //"IP": "192.168.0.101",
         //"Port": 5500,
-        "IP": "192.168.0.102",
-        "Port": 5500,
+        "IP": "127.0.0.1",
+        "Port": 5036,
         "LocalIP": "192.168.0.235",
-        "Protocol": 0, // 0 : KGS , 1:GPM
-        //"MapUrl": "http://127.0.0.1:5216/api/Map"
-        "MapUrl": "http://192.168.0.1:6600/Map/get"
+        "Protocol": 1, // 0 : KGS , 1:GPM
+        "MapUrl": "http://127.0.0.1:5216/api/Map"
+        //"MapUrl": "http://192.168.0.1:6600/Map/get"
       }
     },
     "LOAD_OBS_DETECTION": {
