remove file from project and repos

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,5 @@ project.lock.json
 /SPEC
 VCS_Release
 /GPMVehicleControlSystem/param/IO_Wago.ini
+/GPMVehicleControlSystem/task_name.txt
+/GPMVehicleControlSystem/VMS.db
