優化雷射設定與任務/新增Fork AGV DIO與相關類別

--- a/GPMVehicleControlSystem/param/IO_Wago_Fork_AGV.ini
+++ b/GPMVehicleControlSystem/param/IO_Wago_Fork_AGV.ini
@@ -4,17 +4,32 @@ Start=0
 Size=64 
 RegistSize=1 
 
+X0000=Fork_Extend_Exist_Sensor#
+X0001=Fork_Short_Exist_Sensor#
+
 X0008=EMO 
 X000A=Bumper_Sensor 
 X000B=Panel_Reset_PB 
-X000C=Horizon_Motor_Switch 
-X000E=RightProtection_Area_Sensor_2 
-X000F=LeftProtection_Area_Sensor_2
+X000C=Horizon_Motor_Switch
+X000D=Vertical_Motor_Switch #
+X000E=LeftProtection_Area_Sensor_2
+X000F=RightProtection_Area_Sensor_2
+X0010=Fork_RACK_Left_Exist_Sensor 
+X0011=Fork_Frontend_Abstacle_Sensor 
+X0012=Fork_Under_Pressing_Sensor 
+X0013=Fork_RACK_Right_Exist_Sensor 
 
 X0014=Horizon_Motor_Alarm_1 
 X0015=Horizon_Motor_Busy_1 
 X0016=Horizon_Motor_Alarm_2 
 X0017=Horizon_Motor_Busy_2 
+X0018=Vertical_Motor_Alarm 
+X0019=Vertical_Motor_Busy 
+X001B=Vertical_Home_Pos 
+X001C=Vertical_Up_Pose 
+X001D=Vertical_Down_Pose 
+X001E=Vertical_Up_Hardware_limit 
+X001F=Vertical_Down_Hardware_limit 
 
 X0020=EQ_L_REQ 
 X0021=EQ_U_REQ 
@@ -24,9 +39,11 @@ X0025=EQ_LOW_READY
 X0026=EQ_BUSY
 X0028=EQ_GO 
 
-X002D=Cst_Sensor_1
-X002E=Cst_Sensor_2
-
+X002A=Up_Cargo_Exist_Sernsor
+X002B=Down_Cargo_Exist_Sernsor
+X002C=Vertical_Belt_Sensor
+X002D=Fork_TRAY_Left_Exist_Sensor
+X002E=Fork_TRAY_Right_Exist_Sensor
 X002F=FrontProtection_Obstacle_Sensor
 X0030=FrontProtection_Area_Sensor_1 
 X0031=FrontProtection_Area_Sensor_2 
@@ -42,12 +59,10 @@ Start=512
 Size=64 
 RegistSize=1
 
-Y0000=EMU_EQ_L_REQ
-Y0001=EMU_EQ_U_REQ
-Y0003=EMU_EQ_READY
-Y0004=EMU_EQ_UP_READY
-Y0005=EMU_EQ_LOW_READY
-Y0006=EMU_EQ_BUSY
+Y0000=Fork_Extend
+Y0001=Fork_Shortend
+
+Y0007=Infrared_Door_1
 Y0008=Recharge_Circuit 
 Y0009=Safety_Relays_Reset 
 
@@ -55,10 +70,15 @@ Y000A=Horizon_Motor_Stop
 Y000B=Horizon_Motor_Free 
 Y000C=Horizon_Motor_Reset 
 
+Y000D=Vertical_Motor_Stop 
+Y000E=Vertical_Motor_Free 
+Y000F=Vertical_Motor_Reset 
+
 Y0010=Front_LsrBypass 
 Y0011=Back_LsrBypass 
 Y0012=Left_LsrBypass 
 Y0013=Right_LsrBypass 
+Y0014=Fork_Under_Pressing_SensorBypass 
 
 Y0016=AGV_DiractionLight_Front 
 Y0017=AGV_DiractionLight_Back 
@@ -68,6 +88,9 @@ Y001A=AGV_DiractionLight_G
 Y001B=AGV_DiractionLight_B 
 Y001C=AGV_DiractionLight_Left 
 Y001D=AGV_DiractionLight_Right 
+
+Y001E=Vertical_Belt_SensorBypass 
+Y001F=Vertical_Hardware_limit_bypass
 
 Y0020=AGV_VALID
 Y0023=AGV_READY
