優化WAGO初始連線流程

--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -15,7 +15,7 @@
     "EQName": "AGV_001",
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
     "AlarmList_json_Path": "D:\\param\\AlarmList.json",
-    "SimulationMode": true,
+    "SimulationMode": false,
     "Connections": {
       "RosBridge": {
         //"IP": "192.168.0.101",
