--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -14,7 +14,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
-    "AlarmList_json_Path": "D:\\param\\AlarmList.json",
+    "AlarmList_json_Path": "C:\\param\\AlarmList.json",
     "SimulationMode": false,
     "Connections": {
       "RosBridge": {
