IO_Wago_Inspection_AGV.ini add Horizon_Motor_Busy_1~4 [DI]

--- a/GPMVehicleControlSystem/param/IO_Wago_Inspection_AGV.ini
+++ b/GPMVehicleControlSystem/param/IO_Wago_Inspection_AGV.ini
@@ -31,9 +31,13 @@ X001E=Battery_1_Lock_Sensor
 X001F=Battery_1_Unlock_Sensor 
 
 X0020=Horizon_Motor_Alarm_1 
+X0021=Horizon_Motor_Busy_1 
 X0022=Horizon_Motor_Alarm_2 
+X0023=Horizon_Motor_Busy_2 
 X0024=Horizon_Motor_Alarm_3 
+X0025=Horizon_Motor_Busy_3
 X0026=Horizon_Motor_Alarm_4 
+X0027=Horizon_Motor_Busy_4
 
 X0028=Ground_Hole_CCD_1 
 X0029=Ground_Hole_CCD_2 
