新增Fork Vertical action service

--- a/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
@@ -10,30 +10,30 @@
 
   },
   "VCS": {
-    "AgvType": 2, //0:Fork,1:潛盾, 2:巡檢
-    "SID": "002:001:001",
-    "EQName": "AGV_002",
+    "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
+    "SID": "004:001:001",
+    "EQName": "AGV_004",
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
-    "AlarmList_json_Path": "C:\\param\\AlarmList.json",
+    "AlarmList_json_Path": "D:\\param\\AlarmList.json",
     "SimulationMode": false,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.0.100",
+        "IP": "10.22.141.217",
         "Port": 9090
       },
       "Wago": {
-        "IP": "192.168.0.100",
-        //"IP": "127.0.0.1",
+        "IP": "10.22.141.217",
         "Port": 502
       },
       "AGVS": {
         //"IP": "192.168.0.101",
         //"Port": 5500,
-        "IP": "192.168.0.235",
-        "Port": 5036,
+        "IP": "192.168.0.101",
+        "Port": 5500,
         "LocalIP": "192.168.0.235",
-        "Protocol": 1, // 0 : KGS , 1:GPM
-        "MapUrl": "http://192.168.0.235:5216/api/Map/"
+        "Protocol": 0, // 0 : KGS , 1:GPM
+        //"MapUrl": "http://127.0.0.1:5216/api/Map"
+        "MapUrl": "http://192.168.0.1:6600/Map/get"
       }
     },
     "LOAD_OBS_DETECTION": {
