System optimized and Code clean

--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -10,6 +10,7 @@
 
   },
   "VCS": {
+    "LogFolder": "GPM_AGV_LOG",
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "001:001:001",
     "EQName": "AGV_001",
@@ -29,7 +30,7 @@
         "IP": "127.0.0.1",
         "Port": 5036,
         "LocalIP": "127.0.0.1",
-        "Protocol": 1, // 0 : KGS , 1:GPM
+        "Protocol": 1 // 0 : KGS , 1:GPM
         //"MapUrl": "http://127.0.0.1:5216/api/Map"
       }
     },
