--- a/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
@@ -10,6 +10,7 @@
 
   },
   "VCS": {
+    "LogFolder": "GPM_AGV_LOG",
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "004:001:001",
     "EQName": "AGV_004",
