--- a/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
@@ -10,21 +10,22 @@
 
   },
   "VCS": {
+    "LogFolder": "GPM_AGV_LOG",
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "002:001:001",
     "EQName": "AGV_002",
     "SimulationMode": false,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.0.101",
+        "IP": "192.168.0.102",
         "Port": 9090
       },
       "Wago": {
-        "IP": "192.168.0.101",
+        "IP": "192.168.0.102",
         "Port": 502
       },
       "AGVS": {
-        "IP": "192.168.0.101",
+        "IP": "192.168.0.102",
         "Port": 5500,
         "LocalIP": "192.168.0.235",
         "Protocol": 0, // 0 : KGS , 1:GPM
