--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -3,14 +3,16 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+  
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
   },
   "VCS": {
-    "AgvType": 0,//0:Fork,1:潛盾, 2:巡檢
+    "LogFolder": "GPM_AGV_LOG",
+    "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": false,
