--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -10,6 +10,7 @@
 
   },
   "VCS": {
+    "LogFolder": "GPM_AGV_LOG",
     "AgvType": 2, //0:Fork,1:潛盾, 2:巡檢
     "SID": "002:001:001",
     "EQName": "AGV_002",
