新增fork teach/系統優化

--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     },
-  
+
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -16,6 +16,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": false,
+    "LastVisitedTag" 8,
     "Connections": {
       "RosBridge": {
         //"IP": "192.168.0.101",
