EMO 按壓停止牙叉伸縮

--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -15,6 +15,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": true,
+    "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.235.128",
