--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -3,8 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-
+    }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -16,7 +15,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": false,
-    "LastVisitedTag" 8,
+    "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
         //"IP": "192.168.0.101",
