--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -15,6 +15,7 @@
     "SID": "002:001:001",
     "EQName": "AGV_002",
     "SimulationMode": false,
+    "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.0.100",
