修改參數檔

--- a/GPMVehicleControlSystem/appsettings.Development.json
+++ b/GPMVehicleControlSystem/appsettings.Development.json
@@ -17,6 +17,7 @@
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
     "AlarmList_json_Path": "D:\\param\\AlarmList.json",
     "SimulationMode": false,
+    "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.0.101",
