--- a/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
@@ -15,6 +15,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": false,
+    "LastVisitedTag" :8,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.0.101",
