web api 通訊方式的 上下線請求功能賦歸

--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -18,7 +18,7 @@
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.235.128",
+        "IP": "192.168.235.129",
         "Port": 9090
       },
       "Wago": {
@@ -31,8 +31,8 @@
         "IP": "127.0.0.1",
         "Port": 5036,
         "LocalIP": "127.0.0.1",
-        "Protocol": 1 // 0 : KGS , 1:GPM
-        //"MapUrl": "http://127.0.0.1:5216/api/Map"
+        "Protocol": 1,
+        "MapUrl": "http://127.0.0.1:5216/api/Map"
       }
     },
     "LOAD_OBS_DETECTION": {
