--- a/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
@@ -26,11 +26,11 @@
         "Port": 502
       },
       "AGVS": {
-        "IP": "192.168.0.102",
-        "Port": 5500,
-        "LocalIP": "192.168.0.235",
-        "Protocol": 0, // 0 : KGS , 1:GPM
-        "MapUrl": "http://192.168.0.1:6600/Map/get"
+        "IP": "192.168.0.1",
+        "Port": 5036,
+        "LocalIP": "192.168.0.1",
+        "Protocol": 1, // 0 : KGS , 1:GPM
+        "MapUrl": "http://192.168.0.1:5216/api/Map"
       }
     },
     "LOAD_OBS_DETECTION": {
