--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -11,18 +11,18 @@
   },
   "VCS": {
     "LogFolder": "GPM_AGV_LOG",
-    "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
-    "SID": "001:001:001",
-    "EQName": "AGV_001",
-    "SimulationMode": true,
+    "AgvType": 1, //0:Fork,1:潛盾, 2:巡檢
+    "SID": "002:001:001",
+    "EQName": "AGV_002",
+    "SimulationMode": false,
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.235.129",
+        "IP": "192.168.0.102",
         "Port": 9090
       },
       "Wago": {
-        "IP": "127.0.0.1",
+        "IP": "192.168.0.102",
         "Port": 502
       },
       "AGVS": {
