除錯/修正任務Cycle Stop流程

--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -36,6 +36,7 @@
         "MapUrl": "http://192.168.0.235:5216/api/Map/"
       }
     },
+    "EQHandshakeBypass": true,
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
