--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -35,6 +35,7 @@
         "MapUrl": "http://127.0.0.1:5216/api/Map"
       }
     },
+    "EQHandshakeBypass":true,
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
