--- a/GPMVehicleControlSystem/appsettings.Development.json
+++ b/GPMVehicleControlSystem/appsettings.Development.json
@@ -38,6 +38,7 @@
         "MapUrl": "http://127.0.0.1:5216/api/Map"
       }
     },
+    "EQHandshakeBypass": true,
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
