EQ交握新增Modbus Tcp與設備通訊/修正 discharge unpark 退出後fork沒有回home的bug/code clean

--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -37,6 +37,7 @@
       }
     },
     "EQHandshakeBypass": true,
+    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
