--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -23,7 +23,7 @@
       },
       "Wago": {
         "IP": "127.0.0.1",
-        "Port": 502
+        "Port": 1502
       },
       "AGVS": {
         //"IP": "192.168.0.101",
@@ -36,6 +36,7 @@
       }
     },
     "EQHandshakeBypass": true,
+    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
