--- a/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
@@ -37,6 +37,7 @@
       }
     },
     "EQHandshakeBypass": true,
+    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
