--- a/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
@@ -28,12 +28,13 @@
       "AGVS": {
         "IP": "192.168.0.1",
         "Port": 5036,
-        "LocalIP": "192.168.0.120",
+        "LocalIP": "192.168.0.1",
         "Protocol": 1, // 0 : KGS , 1:GPM
         "MapUrl": "http://192.168.0.1:5216/api/Map"
       }
     },
     "EQHandshakeBypass": true,
+    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
