--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -35,7 +35,8 @@
         "MapUrl": "http://127.0.0.1:5216/api/Map"
       }
     },
-    "EQHandshakeBypass":true,
+    "EQHandshakeBypass": true,
+    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
     "LOAD_OBS_DETECTION": {
       "Enable_Load": false,
       "Enable_UnLoad": false,
