--- a/GPMVehicleControlSystem/appsettings.Development.json
+++ b/GPMVehicleControlSystem/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "Urls":"http://0.0.0.0:7025" ,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -29,13 +30,11 @@
         "Port": 502
       },
       "AGVS": {
-        //"IP": "192.168.0.101",
-        //"Port": 5500,
-        "IP": "192.168.0.1",
-        "Port": 5036,
-        "LocalIP": "192.168.0.1",
-        "Protocol": 1, // 0 : KGS , 1:GPM
-        "MapUrl": "http://127.0.0.1:5216/api/Map"
+        "IP": "192.168.0.102",
+        "Port": 5500,
+        "LocalIP": "192.168.0.12",
+        "Protocol": 0, // 0 : KGS , 1:GPM
+        "MapUrl": "http://192.168.0.1:6600/Map/get"
       }
     },
     "LOAD_OBS_DETECTION": {
