Optimize task executing progress/  Modify DI logic of some signals / Alarm code update

--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -47,6 +47,7 @@
       "Before_In": false,
       "After_EQ_Busy_Off": false
     },
-    "CST_READER_TRIGGER": false
+    "CST_READER_TRIGGER": false,
+    "ForkLifer_Enable": true
   }
 }
