--- a/GPMVehicleControlSystem/param/IO_Wago_Fork_AGV.ini
+++ b/GPMVehicleControlSystem/param/IO_Wago_Fork_AGV.ini
@@ -4,14 +4,14 @@ Start=0
 Size=64 
 RegistSize=1 
 
-X0000=Fork_Short_Exist_Sensor#
-X0001=Fork_Extend_Exist_Sensor#
+X0000=Fork_Extend_Exist_Sensor
+X0001=Fork_Short_Exist_Sensor
 
 X0008=EMO 
 X000A=Bumper_Sensor 
 X000B=Panel_Reset_PB 
 X000C=Horizon_Motor_Switch
-X000D=Vertical_Motor_Switch #
+X000D=Vertical_Motor_Switch
 X000E=LeftProtection_Area_Sensor_2
 X000F=RightProtection_Area_Sensor_2
 X0010=Fork_RACK_Left_Exist_Sensor 
@@ -59,8 +59,8 @@ Start=512
 Size=64 
 RegistSize=1
 
-Y0000=Fork_Shortend
-Y0001=Fork_Extend
+Y0000=Fork_Extend
+Y0001=Fork_Shortend
 
 Y0007=Infrared_Door_1
 Y0008=Recharge_Circuit 
