update web file/ updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ VCS_Release
 /GPMVehicleControlSystem/param/IO_Wago.ini
 /GPMVehicleControlSystem/task_name.txt
 /GPMVehicleControlSystem/VMS.db
+/GPMVehicleControlSystem/uploads
