--- a/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_forkAGV.json
@@ -12,17 +12,17 @@
   "VCS": {
     "LogFolder": "GPM_AGV_LOG",
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
-    "SID": "001:001:001",
-    "EQName": "AGV_001",
+    "SID": "002:001:001",
+    "EQName": "AGV_002",
     "SimulationMode": false,
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
-        "IP": "192.168.0.101",
+        "IP": "192.168.0.102",
         "Port": 9090
       },
       "Wago": {
-        "IP": "192.168.0.101",
+        "IP": "192.168.0.102",
         "Port": 502
       },
       "AGVS": {
@@ -44,6 +44,7 @@
       "Before_In": false,
       "After_EQ_Busy_Off": false
     },
-    "CST_READER_TRIGGER": false
+    "CST_READER_TRIGGER": false,
+    "ForkLifer_Enable": true
   }
 }
