DIO訊號控制/ 本地派任務卡控硬體狀態確認

--- a/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_InspectAGV.json
@@ -15,6 +15,7 @@
     "SID": "002:001:001",
     "EQName": "AGV_002",
     "SimulationMode": false,
+    "DIOSimulationMode": false,
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
