--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -15,6 +15,7 @@
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "SimulationMode": false,
+    "DIOSimulationMode": false,
     "ActiveTrafficControl": true, //自主進行交通狀態判斷
     "LastVisitedTag": 8,
     "Connections": {
