--- a/GPMVehicleControlSystem/appsettings.Development.json
+++ b/GPMVehicleControlSystem/appsettings.Development.json
@@ -18,6 +18,7 @@
     "AlarmList_json_Path": "D:\\param\\AlarmList.json",
     "LastVisitedTag": 8,
     "SimulationMode": false,
+    "DIOSimulationMode": false,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.0.101",
