--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -15,6 +15,7 @@
     "SID": "003:001:001",
     "EQName": "AGV_003",
     "SimulationMode": true,
+    "DIOSimulationMode": true,
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
@@ -23,7 +24,7 @@
       },
       "Wago": {
         "IP": "127.0.0.1",
-        "Port": 1502
+        "Port": 9999
       },
       "AGVS": {
         //"IP": "192.168.0.101",
