--- a/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
+++ b/GPMVehicleControlSystem/appsettings.Development_YMYellowForkAGV.json
@@ -15,6 +15,7 @@
     "SID": "004:001:001",
     "EQName": "AGV_004",
     "SimulationMode": false,
+    "DIOSimulationMode": false,
     "LastVisitedTag": 8,
     "Connections": {
       "RosBridge": {
