--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -14,7 +14,7 @@
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "003:001:001",
     "EQName": "AGV_003",
-    "SimulationMode": true,
+    "SimulationMode": false,
     "DIOSimulationMode": true,
     "LastVisitedTag": 8,
     "Connections": {
@@ -29,9 +29,9 @@
       "AGVS": {
         //"IP": "192.168.0.101",
         //"Port": 5500,
-        "IP": "127.0.0.1",
+        "IP": "192.168.0.1",
         "Port": 5036,
-        "LocalIP": "127.0.0.1",
+        "LocalIP": "192.168.0.1",
         "Protocol": 1,
         "MapUrl": "http://127.0.0.1:5216/api/Map"
       }
