初始化載入前次儲存TAG/

--- a/GPMVehicleControlSystem/appsettings.Development_VMware.json
+++ b/GPMVehicleControlSystem/appsettings.Development_VMware.json
@@ -14,9 +14,9 @@
     "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "003:001:001",
     "EQName": "AGV_003",
-    "SimulationMode": false,
+    "SimulationMode": true,
     "DIOSimulationMode": true,
-    "LastVisitedTag": 8,
+    "LastVisitedTag": 9,
     "Connections": {
       "RosBridge": {
         "IP": "192.168.235.129",
