--- a/GPMVehicleControlSystem/appsettings.Development.json
+++ b/GPMVehicleControlSystem/appsettings.Development.json
@@ -11,7 +11,7 @@
   },
   "VCS": {
     "LogFolder": "GPM_AGV_LOG",
-    "AgvType": 1, //0:Fork,1:潛盾, 2:巡檢
+    "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
     "SID": "001:001:001",
     "EQName": "AGV_001",
     "IO_ini_Path": "D:\\param\\IO_Wago.ini",
@@ -26,12 +26,9 @@
       },
       "Wago": {
         "IP": "192.168.0.101",
-        //"IP": "127.0.0.1",
         "Port": 502
       },
       "AGVS": {
-        //"IP": "192.168.0.101",
-        //"Port": 5500,
         "IP": "192.168.0.1",
         "Port": 5036,
         "LocalIP": "192.168.0.1",
@@ -50,6 +47,10 @@
       "Before_In": false,
       "After_EQ_Busy_Off": false
     },
-    "CST_READER_TRIGGER": false
+    "CST_READER_TRIGGER": false,
+    "ForkLifer_Enable": true,
+    "SensorBypass": {
+      "BeltSensorBypass": true
+      }
+    }
   }
-}
