--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -49,6 +49,9 @@
       "After_EQ_Busy_Off": false
     },
     "CST_READER_TRIGGER": false,
-    "ForkLifer_Enable": true
+    "ForkLifer_Enable": true,
+    "SensorBypass": {
+      "BeltSensorBypass": true
+    }
   }
 }
