--- a/GPMVehicleControlSystem/appsettings.json
+++ b/GPMVehicleControlSystem/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Urls": "http://0.0.0.0:7025",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,52 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-
-  },
-  "VCS": {
-    "LogFolder": "GPM_AGV_LOG",
-    "AgvType": 0, //0:Fork,1:潛盾, 2:巡檢
-    "SID": "001:001:001",
-    "EQName": "AGV_001",
-    "SimulationMode": false,
-    "DIOSimulationMode": false,
-    "ActiveTrafficControl": true, //自主進行交通狀態判斷
-    "LastVisitedTag": 8,
-    "Connections": {
-      "RosBridge": {
-        //"IP": "192.168.0.101",
-        "IP": "127.0.0.1",
-        "Port": 9090
-      },
-      "Wago": {
-        // "IP": "192.168.0.101",
-        "IP": "127.0.0.1",
-        "Port": 502
-      },
-      "AGVS": {
-        "IP": "127.0.0.1",
-        "Port": 5036,
-        "LocalIP": "192.168.0.234",
-        "Protocol": 1, // 0 : KGS , 1:GPM
-        "MapUrl": "http://127.0.0.1:5216/api/Map"
-      }
-    },
-    "EQHandshakeBypass": true,
-    "EQHandshakeMethod": "E84", //E84,MODBUS,EMULATION
-    "LOAD_OBS_DETECTION": {
-      "Enable_Load": false,
-      "Enable_UnLoad": false,
-      "Duration": 4
-    },
-    "CST_EXIST_DETECTION": {
-      "Before_In": false,
-      "After_EQ_Busy_Off": false
-    },
-    "CST_READER_TRIGGER": false,
-    "ForkLifer_Enable": true,
-    "SensorBypass": {
-      "BeltSensorBypass": true
-    }
-  }
+  "ConnectionStrings": {  }
 }
