--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -25,6 +25,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\U007_Remote.pubxml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="GitVersion.Core" Version="5.12.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="NModbus4.Core" Version="1.0.2" />
