--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<AssemblyVersion>1.0.0</AssemblyVersion>
 		<InformationalVersion>23.7.7.1</InformationalVersion>
+		<AssemblyName>GPM_VCS</AssemblyName>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
