部分Function改為Virtual可覆寫 /DIO寫入優化/Demo Mini AGV 修正/修改巡檢AGV DO 起始位置預設值

--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -83,6 +83,9 @@
     <None Update="src\IO_Wago_Inspection_AGV.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="src\IO_Wago_Inspection_AGV_V2.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="src\IO_Wago_Submarine_AGV.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
