修改Demo Mini AGV的IO表

--- a/GPMVehicleControlSystem/src/IO_Wago_Inspection_AGV_V2.ini
+++ b/GPMVehicleControlSystem/src/IO_Wago_Inspection_AGV_V2.ini
@@ -49,7 +49,8 @@ X003A=Battery_2_Exist_4
 X003B=Battery_1_Exist_3 
 X003C=Battery_1_Exist_4 
 X003D=Smoke_Sensor_1 
-X0040=Bumper_Sensor 
+X0040=Safty_PLC_Output 
+X0041=Bumper_Sensor 
 
 [OUTPUT]
 Start=512
@@ -61,48 +62,48 @@ Y0001=Back_LsrBypass
 Y0002=Left_LsrBypass 
 Y0003=Right_LsrBypass 
 Y0004=Motor_Safety_Relay 
-Y0010=AGV_DiractionLight_R 
-Y0011=AGV_DiractionLight_Y 
-Y0012=AGV_DiractionLight_G 
-Y0013=AGV_DiractionLight_B 
-Y0014=AGV_DiractionLight_Left 
-Y0015=AGV_DiractionLight_Right
-Y0018=AGV_VALID 
-Y0019=AGV_L_REQ 
-Y001A=AGV_U_REQ 
-Y001B=AGV_READY 
-Y001C=AGV_CS_0 
-Y001D=AGV_CS_1 
-Y001E=AGV_Check_REQ 
-Y0022=Horizon_Motor_Stop 
-Y0024=Left_Protection_Sensor_IN_1 
-Y0025=Left_Protection_Sensor_IN_2 
-Y0026=Left_Protection_Sensor_IN_3 
-Y0027=Left_Protection_Sensor_IN_4
-Y0028=Horizon_Motor_Free
-Y0029=Battery_1_Electricity_Interrupt
-Y002A=Battery_2_Electricity_Interrupt
-Y002B=Infrared_Door_1 
-Y002C=Infrared_PW_2 
-Y002D=Infrared_PW_1 
-Y002E=Infrared_PW_0 
-Y002F=N2_Open
-Y0030=Front_Protection_Sensor_IN_1 
-Y0031=Front_Protection_Sensor_CIN_1 
-Y0032=Front_Protection_Sensor_IN_2 
-Y0033=Front_Protection_Sensor_CIN_2 
-Y0034=Front_Protection_Sensor_IN_3 
-Y0035=Front_Protection_Sensor_CIN_3 
-Y0036=Front_Protection_Sensor_IN_4 
-Y0037=Front_Protection_Sensor_CIN_4 
-Y0038=Back_Protection_Sensor_IN_1 
-Y0039=Back_Protection_Sensor_CIN_1 
-Y003A=Back_Protection_Sensor_IN_2 
-Y003B=Back_Protection_Sensor_CIN_2 
-Y003C=Back_Protection_Sensor_IN_3 
-Y003D=Back_Protection_Sensor_CIN_3 
-Y003E=Back_Protection_Sensor_IN_4 
-Y003F=Back_Protection_Sensor_CIN_4 
+Y0008=AGV_DiractionLight_R 
+Y0009=AGV_DiractionLight_Y 
+Y000A=AGV_DiractionLight_G 
+Y000B=AGV_DiractionLight_B 
+Y000C=AGV_DiractionLight_Left 
+Y000D=AGV_DiractionLight_Right
+Y0010=AGV_VALID 
+Y0011=AGV_L_REQ 
+Y0012=AGV_U_REQ 
+Y0013=AGV_READY 
+Y0014=AGV_CS_0 
+Y0015=AGV_CS_1 
+Y0016=AGV_Check_REQ 
+Y001A=Horizon_Motor_Stop 
+Y001C=Left_Protection_Sensor_IN_1 
+Y001D=Left_Protection_Sensor_IN_2 
+Y001E=Left_Protection_Sensor_IN_3 
+Y001F=Left_Protection_Sensor_IN_4
+Y0020=Horizon_Motor_Free
+Y0021=Battery_1_Electricity_Interrupt
+Y0022=Battery_2_Electricity_Interrupt
+Y0023=Infrared_Door_1 
+Y0024=Infrared_PW_2 
+Y0025=Infrared_PW_1 
+Y0026=Infrared_PW_0 
+Y0027=N2_Open
+Y0028=Front_Protection_Sensor_IN_1 
+Y0029=Front_Protection_Sensor_CIN_1 
+Y002A=Front_Protection_Sensor_IN_2 
+Y002B=Front_Protection_Sensor_CIN_2 
+Y002C=Front_Protection_Sensor_IN_3 
+Y002D=Front_Protection_Sensor_CIN_3 
+Y002E=Front_Protection_Sensor_IN_4 
+Y002F=Front_Protection_Sensor_CIN_4 
+Y0030=Back_Protection_Sensor_IN_1 
+Y0031=Back_Protection_Sensor_CIN_1 
+Y0032=Back_Protection_Sensor_IN_2 
+Y0033=Back_Protection_Sensor_CIN_2 
+Y0034=Back_Protection_Sensor_IN_3 
+Y0035=Back_Protection_Sensor_CIN_3 
+Y0036=Back_Protection_Sensor_IN_4 
+Y0037=Back_Protection_Sensor_CIN_4 
 
 [INPUT_W]
 Start=0 
