demo mini agv IO表修改

--- a/GPMVehicleControlSystem/src/IO_Wago_Inspection_AGV_V2.ini
+++ b/GPMVehicleControlSystem/src/IO_Wago_Inspection_AGV_V2.ini
@@ -20,8 +20,8 @@ X0015=Panel_Reset_PB
 X0016=Horizon_Motor_Switch 
 X0017=Battery_1_Exist_1 
 X0018=Battery_1_Exist_2 
-X0019=EMO
-X001A=EMO_Button
+X0019=EMO_Button
+X001A=EMO_Button_2
 X001B=SMS_Error 
 X001C=Battery_2_Lock_Sensor 
 X001D=Battery_2_Unlock_Sensor 
@@ -31,6 +31,8 @@ X0020=Horizon_Motor_Alarm_1
 X0021=Horizon_Motor_Alarm_2 
 X0022=Horizon_Motor_Alarm_3 
 X0023=Horizon_Motor_Alarm_4 
+X0024=Front_Right_Ultrasound_Sensor 
+X0025=Back_Left_Ultrasound_Sensor 
 X0028=LeftProtection_Area_Sensor_1 
 X0029=LeftProtection_Area_Sensor_2 
 X002A=LeftProtection_Area_Sensor_3 
@@ -61,7 +63,7 @@ Y0000=Front_LsrBypass
 Y0001=Back_LsrBypass 
 Y0002=Left_LsrBypass 
 Y0003=Right_LsrBypass 
-Y0004=Motor_Safety_Relay 
+Y0004=Safety_Relays_Reset 
 Y0008=AGV_DiractionLight_R 
 Y0009=AGV_DiractionLight_Y 
 Y000A=AGV_DiractionLight_G 
