紀錄CST ID於檔案，並在系統重啟時判斷車上有料時讀取此檔案內紀錄之ID

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ VCS_Release
 /GPMVehicleControlSystem/task_name.txt
 /GPMVehicleControlSystem/VMS.db
 /GPMVehicleControlSystem/uploads
+/GPMVehicleControlSystem/cst_read_id.txt
