修正Fork 動作側邊雷射復原後的蜂鳴器、指示燈以及子狀態變化

--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -15,6 +15,9 @@
     <Optimize>False</Optimize>
     <WarningLevel>1</WarningLevel>
   </PropertyGroup>
+	<PropertyGroup>
+		<RestorePackages>false</RestorePackages>
+	</PropertyGroup>
   <ItemGroup>
     <None Remove="src\IO_Wago.ini" />
     <None Remove="task_name.txt" />
