前往充電站的移動任務撥放特定音效

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ VCS_Release
 /GPMVehicleControlSystem/VMS.db
 /GPMVehicleControlSystem/uploads
 /GPMVehicleControlSystem/cst_read_id.txt
+/.editorconfig
