優化了一些非同步任務流程

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ VCS_Release
 /GPMVehicleControlSystem/VMS.db
 /GPMVehicleControlSystem/uploads
 /GPMVehicleControlSystem/IMU_MaxMin_Record.json
+/GPMVehicleControlSystem/cst_read_id.txt
