變更版本號 2.5.2 /更新預設網頁靜態文件

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,4 @@ VCS_Release
 /GPMVehicleControlSystem/uploads
 /GPMVehicleControlSystem/IMU_MaxMin_Record.json
 /GPMVehicleControlSystem/cst_read_id.txt
+/GPMVehicleControlSystem/publish.cmd
