修正本地圖資與派車不同時(有點位新增)的狀況下會拒絕任務的BUG/修改版本號

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,4 @@ VCS_Release
 /GPMVehicleControlSystem/uploads
 /GPMVehicleControlSystem/cst_read_id.txt
 /.editorconfig
+/GPMVehicleControlSystem/IMU_MaxMin_Record.json
