潛盾IO新增自動門

--- a/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
+++ b/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
@@ -48,6 +48,8 @@ Y0003=EMU_EQ_READY
 Y0004=EMU_EQ_UP_READY
 Y0005=EMU_EQ_LOW_READY
 Y0006=EMU_EQ_BUSY
+
+Y0007=Infrared_Door_1
 Y0008=Recharge_Circuit 
 Y0009=Safety_Relays_Reset 
 
