--- a/GPMVehicleControlSystemTests/GPMVehicleControlSystemTests.csproj
+++ b/GPMVehicleControlSystemTests/GPMVehicleControlSystemTests.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+
+    <Version>3.6.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
