將Tray,Rack 在席檢列舉名稱重新命名

--- a/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
+++ b/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
@@ -24,8 +24,8 @@ X0025=EQ_LOW_READY
 X0026=EQ_BUSY
 X0028=EQ_GO 
 
-X002D=Cst_Sensor_1
-X002E=Cst_Sensor_2
+X002D=TRAY_Exist_Sensor_1
+X002E=TRAY_Exist_Sensor_2
 
 X002F=FrontProtection_Obstacle_Sensor
 X0030=FrontProtection_Area_Sensor_1 
