新增在席訊號/調整貨物狀態判斷邏輯/修正左側雷射Bypass判斷成右方的BUG

--- a/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
+++ b/GPMVehicleControlSystem/src/IO_Wago_Submarine_AGV.ini
@@ -24,6 +24,8 @@ X0025=EQ_LOW_READY
 X0026=EQ_BUSY
 X0028=EQ_GO 
 
+X002A=Cst_Sensor_3
+X002B=Cst_Sensor_4
 X002D=Cst_Sensor_1
 X002E=Cst_Sensor_2
 
