新增程式備份服務與API/更新前端檔案

--- a/GPMVehicleControlSystem/Properties/launchSettings.json
+++ b/GPMVehicleControlSystem/Properties/launchSettings.json
@@ -7,7 +7,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://0.0.0.0:7025"
+      "applicationUrl": "http://0.0.0.0:7025",
+      "workingDirectory": "bin\\Debug\\net6.0"
     },
     "IIS Express": {
       "commandName": "IISExpress",
